# CUA-lark-Gui

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
cases/: calendar_create_event.yaml  docs_create_document.yaml  im_send_text.yaml  smoke.yaml
cases/calendar/: create_event.yaml  im_calendar_handoff.yaml  reschedule_event.yaml
cases/docs/: create_project_report.yaml  edit_project_report.yaml
cases/im/: mention_member.yaml  send_message.yaml
docs/: competition_delivery.md  demo_script.md  design.md  evaluation.md  personal_summary_cycle1.md  personal_summary_cycle2.md  personal_summary_cycle3.md  ppt_outline.md
scripts/: check_env.ps1
src/cua_lark/: __init__.py  __main__.py  case_loader.py  cli.py  config.py  executor.py  llm.py  models.py  orchestrator.py  perception.py  reporter.py  runner.py  runtime.py  windowing.py
src/cua_lark/agents/: __init__.py  grounding.py  planner.py  recovery.py  reporter.py  verifier.py
src/cua_lark/cases/: loader.py
src/cua_lark/executors/: base.py  mock.py  windows.py
src/cua_lark/perception/: ocr.py  screenshot.py  state.py
src/cua_lark/planning/: hybrid.py
src/cua_lark/providers/: base.py  mock.py  openai_compatible.py
src/cua_lark/utils/: images.py  json.py
src/cua_lark/validators/: engine.py
src/cua_lark/web/: __init__.py  app.py
src/cua_lark/web/static/: app.js  styles.css
src/cua_lark/web/templates/: index.html
tests/: test_cases.py  test_executor.py  test_llm.py  test_models.py  test_orchestrator.py  test_reporter.py
