[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cua-lark"
version = "0.1.0"
description = "Computer-use GUI testing agent for Feishu/Lark desktop."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "CUA-Lark Team" }
]
dependencies = [
  "openai>=1.30.0",
  "python-dotenv>=1.0.1",
  "pydantic>=2.7.0",
  "pyautogui>=0.9.54",
  "pillow>=10.0.0",
  "opencv-python>=4.9.0",
  "pyperclip>=1.8.2",
  "rich>=13.7.0",
  "typer>=0.12.0",
  "jinja2>=3.1.0",
  "PyYAML>=6.0.1",
]

[project.optional-dependencies]
windows = [
  "pywinauto>=0.6.8",
]
test = [
  "pytest>=8.0.0",
]

[project.scripts]
cua-lark = "cua_lark.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q -p no:cacheprovider"
